finish up
add biome mapping to help field searching
separate from foundation library